fix sticker-contrast

--- a/styles/generics/_mixins-columns.scss
+++ b/styles/generics/_mixins-columns.scss
@@ -53,7 +53,7 @@ $MIXIN COLUMNS
 
 				& + .sticker {
 					display: table;
-					margin: 5px auto 0 auto;
+					margin: -10px auto 0 auto;
 				}
 			}
 		}
